# harlequin-postgres

./: .gitignore  CHANGELOG.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: publish.yml  release.yml
src/harlequin_myadapter/: __init__.py  adapter.py  cli_options.py
src/harlequin_postgres/: __init__.py  adapter.py  catalog.py  cli_options.py  completions.py  interactions.py  keywords.tsv  loaders.py
tests/: conftest.py  test_adapter.py  test_catalog.py
