[tool.poetry]
name = "harlequin-postgres"
version = "1.2.1"
description = "A Harlequin adapter for Postgres."
authors = ["Ted Conbeer <tconbeer@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "harlequin_postgres", from = "src" },
]

[tool.poetry.plugins."harlequin.adapter"]
postgres = "harlequin_postgres:HarlequinPostgresAdapter"

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
harlequin = ">=1.25,<3"
psycopg = { version = "^3.2", extras = ["binary", "pool"]}

[tool.poetry.group.dev.dependencies]
ruff = "^0.5"
pytest = "^7.4.3"
mypy = "^1.10.0"
pre-commit = "^3.5.0"
importlib_metadata = { version = ">=4.6.0", python = "<3.10.0" }
pyinstrument = "^4.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = ["A", "B", "E", "F", "I"]

[tool.mypy]
python_version = "3.9"
files = [
    "src/**/*.py",
    "tests/**/*.py",
]
mypy_path = "src:stubs"

show_column_numbers = true

# show error messages from unrelated files
follow_imports = "normal"

# be strict
disallow_untyped_calls = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
strict_optional = true

warn_return_any = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true

no_implicit_reexport = true
strict_equality = true
